<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.menu.manual.ManualActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <com.remember.app.customView.CustomTextView
            android:id="@+id/faq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:paddingBottom="16dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/faq" />

        <com.remember.app.customView.CustomTextView
            android:id="@+id/first_point_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:textSize="14dp"
            android:textColor="@color/gray"
            android:background="?attr/selectableItemBackground"
            android:text="@string/first_point_one" />

        <com.remember.app.customView.CustomTextView
            android:id="@+id/second_point_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:textSize="14dp"
            android:textColor="@color/gray"
            android:background="?attr/selectableItemBackground"
            android:text="@string/second_point_two" />

        <com.remember.app.customView.CustomTextView
            android:id="@+id/third_point_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:textSize="14dp"
            android:textColor="@color/gray"
            android:background="?attr/selectableItemBackground"
            android:text="@string/third_point_three" />

        <com.remember.app.customView.CustomTextView
            android:id="@+id/fourth_point_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:textSize="14dp"
            android:textColor="@color/gray"
            android:background="?attr/selectableItemBackground"
            android:text="@string/fourth_point_four" />

        <com.remember.app.customView.CustomTextView
            android:id="@+id/fifth_point_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:textSize="14dp"
            android:textColor="@color/gray"
            android:background="?attr/selectableItemBackground"
            android:text="@string/fifth_point_five" />

        <com.remember.app.customView.CustomTextView
            android:id="@+id/sixth_point_six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:textSize="14dp"
            android:textColor="@color/gray"
            android:background="?attr/selectableItemBackground"
            android:text="@string/sixth_point_six" />

        <com.remember.app.customView.CustomTextView
            android:id="@+id/seventh_point_seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:textSize="14dp"
            android:textColor="@color/gray"
            android:background="?attr/selectableItemBackground"
            android:text="@string/seventh_point_seven" />

        <com.remember.app.customView.CustomTextView
            android:id="@+id/eighth_point_eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColor="@color/gray"
            android:textSize="14dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/eighth_point_eight" />

    <com.remember.app.customView.CustomTextView
        android:id="@+id/first_point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:paddingBottom="16dp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/first_point" />

    <com.remember.app.customView.CustomTextView
        android:id="@+id/first_point_par_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:justificationMode="inter_word"
        android:text="@string/first_point_par_one" />

    <ImageView
        android:id="@+id/first_per"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:paddingTop="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:srcCompat="@drawable/first_per" />

        <com.remember.app.customView.CustomTextView
            android:id="@+id/two_one_per"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textSize="14dp"
            android:justificationMode="inter_word"
            android:text="@string/two_per" />

        <ImageView
            android:id="@+id/two_per"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:paddingTop="16dp"
            app:srcCompat="@drawable/two_per" />

        <com.remember.app.customView.CustomTextView
            android:id="@+id/three_per"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/three_per" />

        <ImageView
            android:id="@+id/three_two_per"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:paddingTop="16dp"
            app:srcCompat="@drawable/three_per" />

        <com.remember.app.customView.CustomTextView
            android:id="@+id/four_per"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textSize="14dp"
            android:justificationMode="inter_word"
            android:text="@string/four_per" />

        <com.remember.app.customView.CustomTextView
            android:id="@+id/second_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:paddingTop="16dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/second_point">
        </com.remember.app.customView.CustomTextView>

        <com.remember.app.customView.CustomTextView
            android:id="@+id/second_one_per"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textSize="14dp"
            android:justificationMode="inter_word"
            android:text="@string/second_one_per"/>

        <ImageView
            android:id="@+id/second_per"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:paddingTop="16dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:srcCompat="@drawable/second_one_per"/>

        <com.remember.app.customView.CustomTextView
            android:id="@+id/second_two_per"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textSize="14dp"
            android:justificationMode="inter_word"
            android:text="@string/second_two_per"/>

        <com.remember.app.customView.CustomTextView
            android:id="@+id/third_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:paddingTop="16dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/third_point"/>

        <com.remember.app.customView.CustomTextView
            android:id="@+id/third_one_per"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textSize="14dp"
            android:justificationMode="inter_word"
            android:text="@string/third_one_per"/>

        <ImageView
            android:id="@+id/third_per"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:paddingTop="16dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:srcCompat="@drawable/third_one_per"/>

        <com.remember.app.customView.CustomTextView
            android:id="@+id/fourth_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:paddingTop="16dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/fourth_point"/>

        <com.remember.app.customView.CustomTextView
            android:id="@+id/fourth_one_per"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textSize="14dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:justificationMode="inter_word"
            android:text="@string/fourth_one_per"/>

        <com.remember.app.customView.CustomTextView
            android:id="@+id/fifth_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:paddingTop="16dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/fifth_point"/>

        <com.remember.app.customView.CustomTextView
            android:id="@+id/fifth_one_per"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textSize="14dp"
            android:justificationMode="inter_word"
            android:text="@string/fifth_one_per"/>

        <ImageView
            android:id="@+id/fifth_per"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:paddingTop="16dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:srcCompat="@drawable/fifth_per"/>

        <com.remember.app.customView.CustomTextView
            android:id="@+id/fifth_two_per"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textSize="14dp"
            android:justificationMode="inter_word"
            android:text="@string/fifth_two_per"/>


        <com.remember.app.customView.CustomTextView
            android:id="@+id/sixth_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:paddingTop="16dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/sixth_point"/>

        <com.remember.app.customView.CustomTextView
            android:id="@+id/sixth_one_per"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textSize="14dp"
            android:justificationMode="inter_word"
            android:text="@string/sixth_one_per"/>

        <ImageView
            android:id="@+id/sixth_per_one"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:paddingTop="16dp"
            app:srcCompat="@drawable/sixth_one_per"/>

        <com.remember.app.customView.CustomTextView
            android:id="@+id/sixth_two_per"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:focusable="true"
            android:textSize="14dp"
            android:focusableInTouchMode="true"
            android:justificationMode="inter_word"
            android:text="@string/sixth_two_per"/>

        <ImageView
            android:id="@+id/sixth_per_two"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:paddingTop="16dp"
            app:srcCompat="@drawable/sixth_two_per"/>

        <com.remember.app.customView.CustomTextView
            android:id="@+id/sixth_three_per"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textSize="14dp"
            android:justificationMode="inter_word"
            android:text="@string/sixth_three_per"/>

        <com.remember.app.customView.CustomTextView
            android:id="@+id/seventh_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:paddingTop="16dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/seventh_point"/>

        <com.remember.app.customView.CustomTextView
            android:id="@+id/seventh_one_per"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textSize="14dp"
            android:justificationMode="inter_word"
            android:text="@string/seventh_one_per"/>

        <ImageView
            android:id="@+id/seventh_per"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:paddingTop="16dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:srcCompat="@drawable/seventh_per"/>


        <com.remember.app.customView.CustomTextView
            android:id="@+id/eighth_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:paddingTop="16dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/eighth_point"/>

        <com.remember.app.customView.CustomTextView
            android:id="@+id/eighth_one_per"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textSize="14dp"
            android:paddingBottom="30dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:justificationMode="inter_word"
            android:text="@string/eighth_one_per"/>

    </LinearLayout>
</ScrollView>

