<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cont"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/panel_white"
    android:orientation="vertical">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



        <EditText
            android:id="@+id/etCurPass"
            style="@style/CustomAppTextFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cur_pass"
            android:inputType="textPassword"
            android:nextFocusForward="@id/first_name"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            android:textSize="18dp"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:singleLine="true" />


        <EditText
            android:id="@+id/etNewPass"
            style="@style/CustomAppTextFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_pass"
            android:inputType="textPassword"
            android:textSize="18dp"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@+id/etCurPass"
            android:imeOptions="actionNext"
            android:singleLine="true" />


        <EditText
            android:id="@+id/etRePass"
            style="@style/CustomAppTextFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/etNewPass"
            android:hint="@string/repass"
            android:inputType="textPassword"
            android:textSize="18dp"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:singleLine="true" />


    <Button
        android:id="@+id/submit"
        style="@style/CustomAppButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/change"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRePass" />

</androidx.constraintlayout.widget.ConstraintLayout>